[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unicef-rest-export"
dynamic = ["version"]
description = "Django package that handles exporting of data"
readme = "README.rst"
license = "Apache-2.0 OR MIT"
authors = [
    { name = "UNICEF", email = "dev@unicef.org" },
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "django",
    "djangorestframework",
    "djangorestframework-csv",
    "lxml",
    "python-docx",
    "pytz",
    "pyyaml",
    "reportlab",
    "tablib[html,xlsx,xls]",
    "xlrd",
    "xlwt",
    "setuptools"  # temporary for python 3.12
]

[project.optional-dependencies]
test = [
    "black",
    "coverage",
    "factory-boy",
    "faker",
    "flake8",
    "isort",
    "psycopg2",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-echo",
]

[project.urls]
Homepage = "https://github.com/unicef/unicef-rest-export"

[tool.hatch.version]
path = "src/unicef_rest_export/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["/src/unicef_rest_export"]

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | migrations
)/
'''
